small room one listener update

--- a/launch_room_one_listener.desktop
+++ b/launch_room_one_listener.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Name=My Python Script
+Name=Launch Room One Listener
 Exec=python /home/pi/Documents/room_files/room_one_listener.py
 Terminal=true
 Type=Application
